proj1/testing/error/trivialerr2.inp
Hello world
* B BETA I II III AAAA
ILBDA AMTAZ
